--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -72,6 +72,8 @@ npg.authorization.satispay.keys=${NPG_SATISPAY_PSP_KEYS}
 npg.authorization.satispay.pspList=${NPG_SATISPAY_PSP_LIST}
 npg.authorization.applepay.keys=${NPG_APPLEPAY_PSP_KEYS}
 npg.authorization.applepay.pspList=${NPG_APPLEPAY_PSP_LIST}
+npg.authorization.googlepay.keys=${NPG_GOOGLE_PAY_PSP_KEYS}
+npg.authorization.googlepay.pspList=${NPG_GOOGLE_PAY_PSP_LIST}
 npg.refund.delayFromAuthRequestMinutes=${NPG_REFUND_DELAY_FROM_AUTH_REQUEST_MINUTES}
 npg.refund.eventProcessingDelaySeconds=${NPG_REFUND_EVENT_PROCESSING_DELAY_SECONDS}
 redisStream.eventController.streamKey=${REDIS_STREAM_EVENT_CONTROLLER_STREAM_KEY}
