--- a/src/test/resources/application.test.properties
+++ b/src/test/resources/application.test.properties
@@ -63,6 +63,8 @@ npg.authorization.satispay.keys={"psp1-satispay":"satispay-key1","psp2-satispay"
 npg.authorization.satispay.pspList=psp1-satispay,psp2-satispay
 npg.authorization.applepay.keys={"psp1-applepay":"applepay-key1","psp2-applepay":"applepay-key2"}
 npg.authorization.applepay.pspList=psp1-applepay,psp2-applepay
+npg.authorization.googlepay.keys={"psp1-googlepay":"googlepay-key1","psp2-googlepay":"googlepay-key2"}
+npg.authorization.googlepay.pspList=psp1-googlepay,psp2-googlepay
 npg.refund.delayFromAuthRequestMinutes=10
 npg.refund.eventProcessingDelaySeconds=10
 redisStream.eventController.streamKey=event-dispatcher-commands
