fix: update env example

--- a/.env.example
+++ b/.env.example
@@ -84,6 +84,8 @@ NPG_SATISPAY_PSP_LIST=BCITITMM
 NPG_SATISPAY_PSP_KEYS={"BCITITMM":"BCITITMM-api-key-SATISPAY"}
 NPG_APPLEPAY_PSP_LIST=BCITITMM
 NPG_APPLEPAY_PSP_KEYS={"BCITITMM":"BCITITMM-api-key-APPLEPAY"}
+NPG_GOOGLE_PAY_PSP_LIST=BCITITMM
+NPG_GOOGLE_PAY_PSP_KEYS={"BCITITMM":"BCITITMM-api-key-googlepay"}
 NPG_REFUND_DELAY_FROM_AUTH_REQUEST_MINUTES=10
 USER_STATS_URL=http://localhost:8098
 USER_STATS_READ_TIMEOUT=10000
