--- a/.devops/deploy-pipelines.yml
+++ b/.devops/deploy-pipelines.yml
@@ -26,32 +26,8 @@ parameters:
     values:
       - False
       - True
-  - name: 'RELEASE_SEMVER'
-    displayName: 'When packing a release, define the version bump to apply (release is done automatically when deploying on UAT and skipped on DEV) '
-    type: string
-    values:
-      - major
-      - minor
-      - patch
-      - none
-    default: patch
-  - name: 'RELEASE_CHART_SEMVER'
-    displayName: 'When upgrading helm chart, define the version bump to apply'
-    type: string
-    values:
-      - major
-      - minor
-      - patch
-    default: patch
   - name: "FORCE_REPLACE_DOCKER_IMAGE"
     displayName: "Force the existing docker image to be replaced (latest tag)"
-    type: boolean
-    default: False
-    values:
-      - False
-      - True
-  - name: "SKIP_RELEASE"
-    displayName: "Skip release"
     type: boolean
     default: False
     values:
@@ -219,40 +195,26 @@ stages:
               instructions: "Please approve or reject UAT blue green promotions for $(commitUrl)"
               onTimeout: 'reject'
 
-  - stage: Release
-    ${{ if eq(parameters['UAT_SKIP_BLUE_DEPLOYMENT'], True) }}:
-      dependsOn: Build_release_candidate
-    ${{ if eq(parameters['UAT_SKIP_BLUE_DEPLOYMENT'], False) }}:
-      dependsOn: Bluegreen_WaitForApproval
-      condition: succeeded()
+
+  - stage: "Get_Release_Version"
+    displayName: "Get the app version to deploy"
+    dependsOn: Build_release_candidate
+    condition: in(dependencies.Build_release_candidate.result, 'Succeeded', 'Skipped')
     jobs:
-      - job: make_release
-        displayName: Make github release
+      - job: "get_version"
         steps:
-          - ${{ if eq(parameters['SKIP_RELEASE'], False) }}:
-              - template: templates/node-job-setup/template.yaml@pagopaCommons
-                parameters:
-                  persistCredentials: true
-              - template: azure-templates/chart-github-release.yml
-                parameters:
-                  gitEmail: $(GIT_EMAIL)
-                  gitUsername: $(GIT_USERNAME)
-                  gitHubConnection: $(GITHUB_CONNECTION)
-                  release_branch: main
-                  semver_chart: '${{ parameters.RELEASE_CHART_SEMVER }}'
-                  semver: '${{ parameters.RELEASE_SEMVER }}'
           - template: azure-templates/chart-current-version.yml
 
   - stage: "tag_docker_release"
     displayName: 'Tag Docker image to be release'
-    dependsOn: Release
+    dependsOn: get_version
     condition:
       and(
       succeeded(),
       ne('${{parameters.RELEASE_SEMVER}}', 'none')
       )
     variables:
-      app_version: $[ stageDependencies.Release.make_release.outputs['chart_current_version.appVersion'] ]
+      app_version: $[ stageDependencies.Get_Release_Version.get_version.outputs['chart_current_version.appVersion'] ]
     jobs:
       - job: "build"
         displayName: 'Build UAT service beta'
@@ -273,20 +235,20 @@ stages:
 
   - stage: "Deploy_UAT_Green"
     displayName: 'UAT green deployment'
-    dependsOn: [ tag_docker_release,Release ]
+    dependsOn: [ tag_docker_release,Get_Release_Version ]
     condition: |
       and(
         eq(${{parameters.UAT_PROD_DEPLOY}}, true),
         in(dependencies.tag_docker_release.result, 'Succeeded', 'Skipped'),
-        in(dependencies.Release.result, 'Succeeded', 'Skipped'),
+        in(dependencies.Get_Release_Version.result, 'Succeeded', 'Skipped'),
         or(
           eq(variables['Build.SourceBranch'], 'refs/heads/main'),
           startsWith(variables['Build.SourceBranch'], 'refs/tags')
         )
       )
     variables:
-      app_version: $[ stageDependencies.Release.make_release.outputs['chart_current_version.appVersion'] ] #chart app version, can differ from release for chart only version bumps
-      release_version: $[ stageDependencies.Release.make_release.outputs['chart_current_version.version'] ] #chart version, this version is the same of the github release/tag
+      app_version: $[ stageDependencies.Get_Release_Version.get_version.outputs['chart_current_version.appVersion'] ] #chart app version, can differ from release for chart only version bumps
+      release_version: $[ stageDependencies.Get_Release_Version.get_version.outputs['chart_current_version.version'] ] #chart version, this version is the same of the github release/tag
     jobs:
       - deployment: "Green_deployment"
         displayName: "Green deployment"
@@ -297,14 +259,6 @@ stages:
           runOnce:
             deploy:
               steps:
-                - checkout: self
-                  displayName: "Checkout"
-                  # without the below checkout git head is set on the commit before release version bump
-                  # so deployed helm release have the previous version instead of the app one
-                - script: |
-                    checkoutVersion=$(release_version)
-                    echo "Checkout release version repo tag: [$checkoutVersion]" 
-                    git checkout $checkoutVersion
                 - task: KubectlInstaller@0
                 - task: Bash@3
                   name: update_chart_version
@@ -329,15 +283,15 @@ stages:
   # --- START Deploy PROD --- #
   - stage: "Prod_WaitForApproval"
     displayName: 'PROD approval deployment'
-    dependsOn: [ Deploy_UAT_Green,Release ]
+    dependsOn: [ Deploy_UAT_Green,Get_Release_Version ]
     condition: |
       and(
         eq(${{parameters.UAT_PROD_DEPLOY}}, true),
         eq(dependencies.Deploy_UAT_Green.result, 'Succeeded'),
-        in(dependencies.Release.result, 'Succeeded', 'Skipped')
+        in(dependencies.Get_Release_Version.result, 'Succeeded', 'Skipped')
       )
     variables:
-      release_url: $[ stageDependencies.Release.make_release.outputs['chart_current_version.releaseUrl'] ]
+      release_url: $[ stageDependencies.Get_Release_Version.get_version.outputs['chart_current_version.releaseUrl'] ]
     jobs:
       - job: Prod_Approval
         displayName: Manual prod deploy approval
@@ -351,125 +305,16 @@ stages:
               instructions: "Please approve or reject PROD promotions for release $(release_url)"
               onTimeout: 'reject'
 
-#  - stage: "Build_PROD_Blue"
-#    displayName: 'PROD blue Build'
-#    dependsOn: [ Prod_WaitForApproval,Release ]
-#    condition: |
-#      and(
-#        eq(${{parameters.UAT_PROD_DEPLOY}}, true),
-#        eq(${{parameters.PROD_SKIP_BLUE_DEPLOYMENT}}, False),
-#        eq(dependencies.Prod_WaitForApproval.result, 'Succeeded'),
-#        in(dependencies.Release.result, 'Succeeded', 'Skipped')
-#      )
-#    variables:
-#      app_version: $[ stageDependencies.Release.make_release.outputs['chart_current_version.appVersion'] ]
-#    jobs:
-#      - job: "PROD_image"
-#        displayName: 'Build PROD image'
-#        steps:
-#          - task: Docker@2
-#            displayName: "docker login for UAT"
-#            inputs:
-#              containerRegistry: $(UAT_CONTAINER_REGISTRY_SERVICE_CONN)
-#              command: "login"
-#          - task: Bash@3
-#            displayName: "docker tag new version for PROD"
-#            inputs:
-#              targetType: "inline"
-#              script: |
-#                docker pull $(UAT_CONTAINER_NAMESPACE)/$(K8S_IMAGE_REPOSITORY_NAME):$(app_version)
-#                docker tag $(UAT_CONTAINER_NAMESPACE)/$(K8S_IMAGE_REPOSITORY_NAME):$(app_version) $(PROD_CONTAINER_NAMESPACE)/$(K8S_IMAGE_REPOSITORY_NAME):$(Build.SourceVersion)
-#          - task: Docker@2
-#            displayName: "docker login for PROD"
-#            inputs:
-#              containerRegistry: $(PROD_CONTAINER_REGISTRY_SERVICE_CONN)
-#              command: "login"
-#          - task: Bash@3
-#            displayName: "Push new version for PROD"
-#            inputs:
-#              targetType: "inline"
-#              script: |
-#                docker push $(PROD_CONTAINER_NAMESPACE)/$(K8S_IMAGE_REPOSITORY_NAME):$(Build.SourceVersion)
-#  - stage: "Deploy_PROD_Blue"
-#    displayName: 'PROD blue deployment'
-#    dependsOn: [ Build_PROD_Blue,Release ]
-#    condition: |
-#      and(
-#        eq(${{parameters.UAT_PROD_DEPLOY}}, true),
-#        eq(${{parameters.PROD_SKIP_BLUE_DEPLOYMENT}}, False),
-#        eq(dependencies.Build_PROD_Blue.result, 'Succeeded'),
-#        in(dependencies.Release.result, 'Succeeded', 'Skipped')
-#      )
-#    variables:
-#      app_version: $[ stageDependencies.Release.make_release.outputs['chart_current_version.appVersion'] ]
-#    jobs:
-#      - deployment: "Blue_PROD_deployment"
-#        displayName: "Blue PROD deployment"
-#        pool:
-#          name: pagopa-prod-linux
-#        environment: 'PROD'
-#        strategy:
-#          runOnce:
-#            deploy:
-#              steps:
-#                - checkout: self
-#                  displayName: "Checkout"
-#                - task: Bash@3
-#                  name: update_chart_version
-#                  displayName: 'Setup helm microservice chart'
-#                  inputs:
-#                    targetType: "inline"
-#                    script: |
-#                      helm repo add microservice-chart https://pagopa.github.io/aks-microservice-chart-blueprint
-#                      helm dep build helm
-#                - template: azure-templates/helm-microservice-chart-deploy.yml
-#                  parameters:
-#                    DO_DEPLOY: true
-#                    DO_BLUE_GREEN_DEPLOY: true
-#                    ENV: 'PROD'
-#                    KUBERNETES_SERVICE_CONN: $(PROD_KUBERNETES_SERVICE_CONN)
-#                    NAMESPACE: ecommerce
-#                    APP_NAME: $(K8S_IMAGE_REPOSITORY_NAME)
-#                    VALUE_FILE: "helm/values-prod.yaml"
-#                    GREEN_VERSION: $(app_version)
-#                    BLUE_VERSION: $(Build.SourceVersion)
-
-#  - stage: "PROD_Green_WaitForApproval"
-#    displayName: 'PROD green approval deployment'
-#    ${{ if eq(parameters['PROD_SKIP_BLUE_DEPLOYMENT'], True) }}:
-#      dependsOn: Prod_WaitForApproval
-#      condition: |
-#        and(
-#          eq(${{parameters.UAT_PROD_DEPLOY}}, true),
-#          eq(dependencies.Prod_WaitForApproval.result, 'Succeeded')
-#        )
-#    ${{ if eq(parameters['PROD_SKIP_BLUE_DEPLOYMENT'], False) }}:
-#      dependsOn: Deploy_PROD_Blue
-#    variables:
-#      release_url: $[ stageDependencies.Release.make_release.outputs['chart_current_version.releaseUrl'] ]
-#    jobs:
-#      - job: Bluegreen_PROD_WaitForApproval
-#        displayName: Manual green deploy approval
-#        pool: server
-#        timeoutInMinutes: 4320 # 3 days
-#        steps:
-#          - task: ManualValidation@0
-#            timeoutInMinutes: 4320 # 3 days
-#            inputs:
-#              notifyUsers: $(APPROVE_TOUCHPOINT_MAIL)
-#              instructions: "Please approve or reject PROD green promotions for release $(release_url)"
-#              onTimeout: 'reject'
-
   - stage: "Build_PROD_Green"
     displayName: 'PROD green Build'
-    dependsOn: [ Prod_WaitForApproval,Release ]
+    dependsOn: [ Prod_WaitForApproval,Get_Release_Version ]
     variables:
-      prod_app_version: $[ stageDependencies.Release.make_release.outputs['chart_current_version.appVersion'] ]
+      prod_app_version: $[ stageDependencies.Get_Release_Version.get_version.outputs['chart_current_version.appVersion'] ]
     condition: |
       and(
         eq(${{parameters.UAT_PROD_DEPLOY}}, true),
         eq(dependencies.Prod_WaitForApproval.result, 'Succeeded'),
-        in(dependencies.Release.result, 'Succeeded', 'Skipped')
+        in(dependencies.Get_Release_Version.result, 'Succeeded', 'Skipped')
       )
     jobs:
       - job: "PROD_image"
@@ -635,9 +480,9 @@ stages:
     displayName: Deploy the new release version
     dependsOn:
       - Start_Staging_Stop_Prod_Receivers
-      - Release
+      - Get_Release_Version
     variables:
-      newReleaseVersion: $[ stageDependencies.Release.make_release.outputs['chart_current_version.version'] ]
+      newReleaseVersion: $[ stageDependencies.Get_Release_Version.get_version.outputs['chart_current_version.version'] ]
     condition: succeeded()
     pool: server
     jobs:
@@ -655,9 +500,9 @@ stages:
     displayName: Deploy NEW version
     dependsOn:
       - Deploy_New_Version_Approval
-      - Release
+      - Get_Release_Version
     variables:
-      newReleaseVersion: $[ stageDependencies.Release.make_release.outputs['chart_current_version.version'] ]
+      newReleaseVersion: $[ stageDependencies.Get_Release_Version.get_version.outputs['chart_current_version.version'] ]
     condition: succeeded()
     pool:
       name: pagopa-prod-linux
@@ -777,15 +622,15 @@ stages:
   # --- START ROLLBACK PROD --- #
   - stage: "Prod_RollbackForApproval"
     displayName: 'PROD ROLLBACK'
-    dependsOn: [ Scale_Down_Staging_Deployment,Release ]
+    dependsOn: [ Scale_Down_Staging_Deployment,Get_Release_Version ]
     condition: |
       and(
         eq(${{parameters.UAT_PROD_DEPLOY}}, true),
         in(dependencies.Scale_Down_Staging_Deployment.result, 'Succeeded', 'SucceededWithIssues', 'Failed', 'Skipped', 'Canceled'),
-        in(dependencies.Release.result, 'Succeeded', 'Skipped')
+        in(dependencies.Get_Release_Version.result, 'Succeeded', 'Skipped')
       )
     variables:
-      release_url: $[ stageDependencies.Release.make_release.outputs['chart_current_version.releaseUrl'] ]
+      release_url: $[ stageDependencies.Get_Release_Version.get_version.outputs['chart_current_version.releaseUrl'] ]
     jobs:
       - job: Prod_Rollback_Approval
         displayName: Manual prod rollback approval
