--- a/.devops/deploy-pipelines.yml
+++ b/.devops/deploy-pipelines.yml
@@ -211,7 +211,7 @@ stages:
     condition:
       and(
       succeeded(),
-      ne('${{parameters.RELEASE_SEMVER}}', 'none')
+      eq(${{parameters.SKIP_BUILD}}, False)
       )
     variables:
       app_version: $[ stageDependencies.Get_Release_Version.get_version.outputs['chart_current_version.appVersion'] ]
