fix: restore checkout self

--- a/.devops/deploy-pipelines.yml
+++ b/.devops/deploy-pipelines.yml
@@ -259,6 +259,8 @@ stages:
           runOnce:
             deploy:
               steps:
+                - checkout: self
+                  displayName: "Checkout"
                 - task: KubectlInstaller@0
                 - task: Bash@3
                   name: update_chart_version
