--- a/.github/workflows/semver_release.yaml
+++ b/.github/workflows/semver_release.yaml
@@ -26,6 +26,7 @@ jobs:
         with:
           github_token: ${{ secrets.BOT_GITHUB_TOKEN}}
   semver_update:
+    if: ${{needs.semver_labels.outputs.skip_release == 'False'}}
     name: Update semver for every eligible file of repo (helm charts, mvn files, etc.)
     runs-on: ubuntu-latest
     needs: semver_labels
