--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 application.name=@project.artifactId@
 build.version=@project.version@
-spring.redis.host=${REDIS_HOST}
-spring.redis.password=${REDIS_PASSWORD}
-spring.redis.port=${REDIS_PORT}
-spring.redis.ssl=${REDIS_SSL_ENABLED}
+spring.data.redis.host=${REDIS_HOST}
+spring.data.redis.password=${REDIS_PASSWORD}
+spring.data.redis.port=${REDIS_PORT}
+spring.data.redis.ssl.enabled=${REDIS_SSL_ENABLED}
 azurestorage.queues.transactionexpiration.name=${TRANSACTIONS_EXPIRATION_QUEUE_NAME}
 azurestorage.queues.transactionsrefund.name=${TRANSACTIONS_REFUND_QUEUE_NAME}
 azurestorage.queues.transactionrefundretry.name=${TRANSACTIONS_REFUND_RETRY_QUEUE_NAME}
