--- a/pom.xml
+++ b/pom.xml
@@ -15,8 +15,8 @@
 		send user email, refund based on transaction status</description>
 	<properties>
 		<java.version>17</java.version>
-		<kotlin.version>1.9.24</kotlin.version>
-		<kotlinx-coroutines.version>1.6.4</kotlinx-coroutines.version>
+		<kotlin.version>2.1.21</kotlin.version>
+		<kotlinx-coroutines.version>1.10.2</kotlinx-coroutines.version>
 		<spring-cloud-azure.version>5.22.0</spring-cloud-azure.version>
 		<jacoco.version>0.8.8</jacoco.version>
 		<pagopa-ecommerce-commons.version>1.36.0</pagopa-ecommerce-commons.version>
@@ -25,8 +25,8 @@
 			**/it/pagopa/ecommerce/eventdispatcher/validation/**
 		</sonar.coverage.exclusions>
 		<spotless.version>2.28.0</spotless.version>
-		<mock-web-server.version>4.11.0</mock-web-server.version>
-		<ecs-logging-version>1.7.0</ecs-logging-version>
+		<mock-web-server.version>4.12.0</mock-web-server.version>
+		<ecs-logging-version>1.5.0</ecs-logging-version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -49,11 +49,6 @@
 			<groupId>com.azure.spring</groupId>
 			<artifactId>spring-cloud-azure-starter-data-cosmos</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>com.azure.spring</groupId>
-			<artifactId>spring-cloud-azure-starter-storage-queue</artifactId>
-		</dependency>
-
 		<dependency>
 			<groupId>com.fasterxml.jackson.module</groupId>
 			<artifactId>jackson-module-kotlin</artifactId>
@@ -81,8 +76,14 @@
 			<version>${kotlinx-coroutines.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>org.jetbrains.kotlinx</groupId>
+			<artifactId>kotlinx-coroutines-reactive</artifactId>
+			<version>${kotlinx-coroutines.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
+			<version>3.0.13</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -115,14 +116,8 @@
 			<version>0.10.4</version>
 		</dependency>
 		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-api</artifactId>
-			<version>2.0.17</version>
-		</dependency>
-		<dependency>
-			<groupId>ch.qos.logback</groupId>
-			<artifactId>logback-classic</artifactId>
-			<version>1.5.18</version>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.integration</groupId>
@@ -147,23 +142,28 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>io.springfox</groupId>
-			<artifactId>springfox-swagger2</artifactId>
-			<version>3.0.0</version>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webflux-ui</artifactId>
+			<version>2.8.8</version>
 		</dependency>
+
 		<dependency>
 			<groupId>org.openapitools</groupId>
 			<artifactId>jackson-databind-nullable</artifactId>
-			<version>0.1.0</version>
+			<version>0.2.6</version>
 		</dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.datatype</groupId>
 			<artifactId>jackson-datatype-jsr310</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-jdk8</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>jakarta.xml.bind</groupId>
 			<artifactId>jakarta.xml.bind-api</artifactId>
-			<version>3.0.0</version>
+			<version>4.0.2</version>
 		</dependency>
 		<dependency>
 			<groupId>io.swagger.core.v3</groupId>
@@ -189,12 +189,17 @@
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
-			<version>1.18.38</version>
 		</dependency>
 		<dependency>
 			<groupId>it.pagopa</groupId>
 			<artifactId>pagopa-ecommerce-commons</artifactId>
 			<version>${pagopa-ecommerce-commons.version}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>io.springfox</groupId>
+					<artifactId>springfox-swagger2</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>it.pagopa</groupId>
@@ -202,6 +207,12 @@
 			<version>${pagopa-ecommerce-commons.version}</version>
 			<type>test-jar</type>
 			<scope>test</scope>
+			<exclusions>
+				<exclusion>
+					<groupId>io.springfox</groupId>
+					<artifactId>springfox-swagger2</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>com.squareup.okhttp3</groupId>
@@ -239,6 +250,12 @@
 			<artifactId>opentelemetry-semconv</artifactId>
 			<version>1.27.0-alpha</version>
 		</dependency>
+		<dependency>
+			<groupId>org.jetbrains.kotlin</groupId>
+			<artifactId>kotlin-maven-allopen</artifactId>
+			<version>2.1.21</version> <!-- Usa la stessa versione del kotlin-maven-plugin -->
+		</dependency>
+
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
@@ -261,6 +278,8 @@
 
 	<build>
 		<plugins>
+
+
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
@@ -290,6 +309,7 @@
 			<plugin>
 				<groupId>org.jetbrains.kotlin</groupId>
 				<artifactId>kotlin-maven-plugin</artifactId>
+				<version>2.1.21</version>
 				<configuration>
 					<args>
 						<arg>-Xjsr305=strict</arg>
@@ -314,7 +334,7 @@
 					<dependency>
 						<groupId>org.projectlombok</groupId>
 						<artifactId>lombok</artifactId>
-						<version>1.18.38</version>
+						<version>1.18.20</version>
 						<scope>compile</scope>
 					</dependency>
 				</dependencies>
@@ -353,7 +373,7 @@
 			<plugin>
 				<groupId>org.openapitools</groupId>
 				<artifactId>openapi-generator-maven-plugin</artifactId>
-				<version>7.13.0</version>
+				<version>7.1.0</version>
 				<executions>
 					<execution>
 						<id>node-api</id>
@@ -451,9 +471,9 @@
 								<skipDefaultInterface>true</skipDefaultInterface>
 								<useSwaggerUI>false</useSwaggerUI>
 								<reactive>true</reactive>
-								<enumPropertyNaming>UPPERCASE</enumPropertyNaming>
-								<useJakartaEe>true</useJakartaEe>
+								<enumPropertyNaming>UPPERCASE</enumPropertyNaming><useJakartaEe>true</useJakartaEe>
 								<useSpringBoot3>true</useSpringBoot3>
+
 							</configOptions>
 						</configuration>
 					</execution>
@@ -570,9 +590,15 @@
 					</execution>
 				</executions>
 				<configuration>
-					<proc>none</proc>
 					<source>17</source>
 					<target>17</target>
+					<annotationProcessorPaths>
+						<path>
+							<groupId>it.pagopa</groupId>
+							<artifactId>pagopa-ecommerce-commons</artifactId>
+							<version>${pagopa-ecommerce-commons.version}</version>
+						</path>
+					</annotationProcessorPaths>
 					<compilerArgs>--enable-preview</compilerArgs>
 				</configuration>
 			</plugin>
