fix: add jackson xml dataformat

--- a/pom.xml
+++ b/pom.xml
@@ -156,6 +156,10 @@
 			<artifactId>jackson-datatype-jdk8</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>com.fasterxml.jackson.dataformat</groupId>
+			<artifactId>jackson-dataformat-xml</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>jakarta.xml.bind</groupId>
 			<artifactId>jakarta.xml.bind-api</artifactId>
 			<version>4.0.2</version>
