chore: [PIDM-559-563-upgrade-springboot3-ecommerce-event-dispatcher-service ]upgrade spring boot 3.4.5 (#400)
* chore: upgrade spring boot 3.4.5

* chore: upgrade spring boot 3.4.5

* chore: upgrade spring boot 3.4.5

* chore: upgrade spring boot 3.4.5

* chore: upgrade spring boot 3.4.5 add sprind.data.redis in properties

* chore: correct test failures

* chore: restore test

* chore remove unused lib + update commons ref

* chore: update tests

* chore: update tests

* chore: restore validate phase

* fix: add jackson xml dataformat

* chore: remove annotationProcessorPaths in pom

* chore: replace org.springframework.boot.loader.JarLauncher with org.springframework.boot.loader.launch.JarLauncher

* chore: update commons library ref

---------

Co-authored-by: Forciniti Luigi <forciniti@spi.srl>
Co-authored-by: Pietro Tota <115724836+pietro-tota@users.noreply.github.com>
Co-authored-by: Pietro Tota <pietro.tota@pagopa.it>

--- a/src/test/resources/application.test.properties
+++ b/src/test/resources/application.test.properties
@@ -18,10 +18,10 @@ nodo.readTimeout=10000
 nodo.connectionTimeout=10000
 nodo.nodeforecommerce.apikey=key
 nodo.ecommerce.clientId=key
-spring.redis.host=redis
-spring.redis.password=redis
-spring.redis.port=9999
-spring.redis.ssl=false
+spring.data.redis.host=redis
+spring.data.redis.password=redis
+spring.data.redis.port=9999
+spring.data.redis.ssl.enabled=false
 spring.data.mongodb.uri=mongodb://mongo:mongo@$mongo:6080/?&readPreference=primaryPreferred&maxStalenessSeconds=90&minPoolSize=0&maxPoolSize=10&maxIdleTimeMS=100&connectTimeoutMS=100&socketTimeoutMS=100&serverSelectionTimeoutMS=100&waitQueueTimeoutMS=100&heartbeatFrequencyMS=100
 spring.data.mongodb.database=ecommerce
 server.port=9000
@@ -32,7 +32,7 @@ closePaymentRetry.eventOffsetSeconds=60
 closePaymentRetry.maxAttempts=3
 notificationRetry.eventOffsetSeconds=60
 notificationRetry.maxAttempts=3
-transactionAuthorizationOutcomeWaiting.eventOffsetSeconds=60
+transactionAuthorizationOutcomeWaiting.eventOffsetSeconds=80
 transactionAuthorizationOutcomeWaiting.maxAttempts=3
 notificationsService.uri=http://localhost/notifications-service
 notificationsService.readTimeout=10000
