--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -92,3 +92,6 @@ userStatsService.readTimeout=${USER_STATS_READ_TIMEOUT}
 userStatsService.connectionTimeout=${USER_STATS_CONNECTION_TIMEOUT}
 userStatsService.apiKey=${USER_STATS_API_KEY}
 userStatsService.enableSaveLastUsage=${USER_STATS_SERVICE_ENABLE_SAVE_LAST_USAGE:true}
+security.apiKey.securedPaths=${SECURITY_API_KEYS_SECURED_PATHS}
+security.apiKey.primary=${SECURITY_API_KEYS_PRIMARY}
+security.apiKey.secondary=${SECURITY_API_KEYS_SECONDARY}
