--- a/src/test/resources/application.test.properties
+++ b/src/test/resources/application.test.properties
@@ -81,3 +81,6 @@ userStatsService.connectionTimeout=10000
 userStatsService.apiKey=userStatsApiKey
 userStatsService.enableSaveLastUsage=true
 transactionAuthorizationOutcomeWaiting.firstAttemptDelaySeconds=180
+security.apiKey.securedPaths=/event-dispatcher
+security.apiKey.primary=primary-key
+security.apiKey.secondary=secondary-key
