--- a/.devops/deploy-pipelines.yml
+++ b/.devops/deploy-pipelines.yml
@@ -471,10 +471,12 @@ stages:
             parameters:
               ENV: PROD
               TARGET_DEPLOYMENT_VERSION: STAGING
+              SERVICE_API_KEY: $(PROD_SERVICE_API_KEY)
           - template: azure-templates/stop-receivers.yml
             parameters:
               ENV: PROD
               TARGET_DEPLOYMENT_VERSION: PROD
+              SERVICE_API_KEY: $(PROD_SERVICE_API_KEY)
 
 
   # STEP 3: Deploy new release as Deployment PROD approval task
@@ -578,10 +580,12 @@ stages:
             parameters:
               ENV: PROD
               TARGET_DEPLOYMENT_VERSION: PROD
+              SERVICE_API_KEY: $(PROD_SERVICE_API_KEY)
           - template: azure-templates/stop-receivers.yml
             parameters:
               ENV: PROD
               TARGET_DEPLOYMENT_VERSION: STAGING
+              SERVICE_API_KEY: $(PROD_SERVICE_API_KEY)
 
 
   # STEP 5: deployment rollout ended, scale down staging deployment PODS
@@ -693,10 +697,12 @@ stages:
             parameters:
               ENV: PROD
               TARGET_DEPLOYMENT_VERSION: STAGING
+              SERVICE_API_KEY: $(PROD_SERVICE_API_KEY)
           - template: azure-templates/stop-receivers.yml
             parameters:
               ENV: PROD
               TARGET_DEPLOYMENT_VERSION: PROD
+              SERVICE_API_KEY: $(PROD_SERVICE_API_KEY)
 
   # STEP 2: rollback new release
   - stage: Rollback_New_Deployment_Helm_Release
@@ -748,10 +754,12 @@ stages:
             parameters:
               ENV: PROD
               TARGET_DEPLOYMENT_VERSION: PROD
+              SERVICE_API_KEY: $(PROD_SERVICE_API_KEY)
           - template: azure-templates/stop-receivers.yml
             parameters:
               ENV: PROD
               TARGET_DEPLOYMENT_VERSION: STAGING
+              SERVICE_API_KEY: $(PROD_SERVICE_API_KEY)
   # STEP 4: scale down staging release (by adding back annotation to scaledObject)
   - stage: Scale_Down_Staging_Deployment_Approval_Rollback
     dependsOn: Start_New_Stop_Staging_Receivers_Rollback
