--- a/pom.xml
+++ b/pom.xml
@@ -575,6 +575,13 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.13.0</version>
+				<configuration>
+					<release>21</release>
+					<parameters>true</parameters>
+					<source>21</source>
+					<target>21</target>
+				</configuration>
 				<executions>
 					<execution>
 						<id>compile</id>
